syntax = "proto2";

package netng.protos;

import "protos/prostate_cancer_dataset.proto";

message Dataset {
  optional string dataset_path = 1[default=''];

  optional string dataset_info_file = 2[default=''];

  // 0: 0 - 255
  // 1: 0 - 1
  // 2: -1 - 1
  optional int32 val_range = 4[default=0];

  optional bool balance_classes = 5[default=false];

  oneof dataset_type {
    ProstateCancerDataset prostate_cancer = 6;
  }

  // Num classes without background
  optional int32 num_classes = 7[default=0];

  // Should input have zero mean and unit variance?
  optional bool scale_input = 8[default=false];

  optional string tfrecords_type = 9[default='regular'];

  optional bool only_augment_positive = 10[default=false];
}