syntax = "proto2";

package netng.protos;

import "protos/faster_rcnn.proto";
import "protos/unet.proto";
import "protos/gan.proto";
import "protos/normalization.proto";

message Model {
  optional int32 input_image_size_x = 1[default=0];
  optional int32 input_image_size_y = 2[default=0];
  optional int32 input_image_size_z = 13[default=0];
  optional int32 input_image_channels = 3[default=0];
  
  oneof model_type {
    FasterRCNN faster_rcnn = 4;
    UNet unet = 5;
    GAN gan = 11;
  }

  optional bool use_norm = 6[default=false];
  optional bool norm_first = 10[default=false];

  oneof norm {
    BatchNormalization batch_norm = 7;
    InstanceNormalization instance_norm = 8;
    GroupNormalization group_norm = 14;
    LayerNormalization layer_norm = 16;
  }

  // same or valid
  optional string conv_padding = 9[default='valid'];
  
  optional bool conv_locally_connected = 15[default=false];

  optional string model_objective = 12[default='segmentation'];
}