syntax = "proto2";

package netng.protos;

import "protos/preprocessor.proto";
import "protos/optimizer.proto";
import "protos/loss.proto";

message TrainConfig {
  // Input queue batch size.
  optional uint32 batch_size = 1;

  // Data augmentation options.
  repeated PreprocessingStep data_augmentation_options = 2;

  // After how many seconds to save the current model
  optional int32 save_checkpoints_secs = 4;

  // Whether to shuffle the dataset
  optional bool shuffle = 12 [default=true];

  optional bool add_regularization_loss = 13 [default=true];

  optional Optimizer optimizer = 15;

  // Save summaries every this many steps.
  optional int32 save_summary_steps = 17;

  optional float weight_decay = 18;

  optional int32 shuffle_buffer_size = 19;

  optional Loss loss = 20;

  optional int32 early_stopping_min_steps = 21;
  optional int32 early_stopping_max_steps_without_decrease = 22;
  optional int32 early_stopping_run_every_secs = 23;
}